--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
     </div>
 
     <!-- Ảnh động trang trí -->
-    <img src="./assets/mewmew.gif" alt="GIF" class="center-gif" /> <!-- Thay ảnh động bên dưới -->
+    <img src="./main/mewmew.gif" alt="GIF" class="center-gif" /> <!-- Thay ảnh động bên dưới -->
 
     <!-- Hiển thị lời chúc -->
     <div class="popup" id="popup">
@@ -385,29 +385,29 @@
     <div class="overlay" id="overlay"></div>
 
     <!-- Nhạc nền  -->
-    <audio id="player" src="./assets/b.m4a"></audio> <!-- Sửa bài hát ở đây -->
+    <audio id="player" src="./main/b.m4a"></audio> <!-- Sửa bài hát ở đây -->
 
     <script>
         //Sửa ảnh và lời nhắn ở đây
         const messages = [
             {
-                img: "./assets/b1.jpg", //Thay ảnh
+                img: "./main/b1.jpg", //Thay ảnh
                 text: "Chúc Lợn Con của anh lúc nào cũng vui vẻ, cười tít mắt. Nụ cười của em là vitamin xịn nhất của anh đoáa! 🐷💖" //Thay lời nhắn
             },
             {
-                img: "./assets/b2.jpg",
+                img: "./main/b2.jpg",
                 text: "Chúc Lợn Con ăn gì cũng thấy ngon miệng, ăn cả thế giới mà vẫn thon thả Ăn no rồi mới có sức yêu anh nha! 😋🍲❤️"
             },
             {
-                img: "./assets/c3.jpg",
+                img: "./main/c3.jpg",
                 text: "Chúc Lợn Con đi học bớt stress, mọi việc suôn sẻ. Mệt quá thì về đây, có anh sạc pin choaa đầy! Hé hé hé "
             },
             {
-                img: "./assets/c4.jpg",
+                img: "./main/c4.jpg",
                 text: " Chúc Bé Ỉnn của anh luôn cảm thấy được yêu thương, cưng chiều hết nấc. Yêu nhất cái sự đáng yêu và hay nũng nịu nìiii 🥰😘 "
             },
             {
-                img: "./assets/b5.jpg",
+                img: "./main/b5.jpg",
                 text: "Chúc cho chúng mình mãi hạnh phúc, và chúc Lợn Con của anh luôn là chú heo con hạnh phúc, vô tư vô lo nhất trong vòng tay anh! 💞🐷👩‍❤️‍💋‍👨 "
             }
         ];
@@ -422,12 +422,12 @@
         const centerText = document.getElementById("centerText");
         //Thay những ảnh rơi từ trên xuống ở đây
         const letterImages = [
-            "./assets/letters.png",
-            "./assets/q3.png",
-            "./assets/h1.png",
-            "./assets/h3.png",
-            "./assets/t2.png",
-            "./assets/t5.png",
+            "./main/letters.png",
+            "./main/q3.png",
+            "./main/h1.png",
+            "./main/h3.png",
+            "./main/t2.png",
+            "./main/t5.png",
         ];
 
         function createHeartExplosion(x, y) {
@@ -513,5 +513,6 @@
     </script>
 
 </body>
+
 
 </html>
